2008-11-21  Martin Bonnin  <martinbonnin@gmail.com>
 
	* revert last changeset:
	We want this to be fixed a better way

2008-11-20  Martin Bonnin  <martinbonnin@gmail.com>
 
	* camel operation:
	adding camel_operation_mute/unmute() and use it to filter the progress
	events. This prevents to send bad progress when refreshing an IMAP folder

2008-11-20  Martin Bonnin  <martinbonnin@gmail.com>
 
 	* libtinymail-camel/camel-lite/camel/providers/imap:
 	For IMAP, we open 2 sessions: one for standard operations, the other
 	for fetching messages. This makes concurrent accesses to the folder summary
 	therefore corrupting it.
 	This happens e.g when you delete a message and fetch a new one afterwards.
 	This patch adds the "dont_touch_summary" parameter to prevent the GetMsg session to
 	mess up too much.

2008-11-20  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-folder.c: guess folder type from name if
	we couldn't know the folder type from camel.

2008-11-19  Martin Bonnin  <martinbonnin@gmail.com>

	* libtinymail-camel/camel-lite/camel/providers/pop3/camel-pop3-folder.c:
	Fix a camel_operation leak introduced in r3767. This had the side effect
	of triggering a "**: Camel operation status stack non empty:" warning 
	 when trying to sync a POP account

2008-11-19  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-send-queue-priv.h
	* libtinymail-camel/tny-camel-send-queue.c: added some locking to
	prevent two send queue threads running at the same time.

	* libtinymail-camel/tny-camel-mime-part.c
	(tny_camel_mime_part_decode_to_stream_default):
	adds a reference to protect wrapper when decoding to a stream

2008-11-19  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-folder.c:
	Remove calls to camel_imap_folder_start_idle that could happen even
	when idle was locked by an operation, causing hangs.

2008-11-18  Jose Dapena Paz  <jdapena@igalia.com>
